# polars_ta_extension

talib/: Cargo.toml
talib-sys/: Cargo.toml  build.rs
talib-sys/src/: bindings.rs
